--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "devDependencies": {
     "@wdio/appium-service": "^8.11.2",
+    "@wdio/browserstack-service": "^8.14.1",
     "@wdio/local-runner": "^8.11.2",
     "@wdio/mocha-framework": "^8.11.0",
     "@wdio/spec-reporter": "^8.11.2",
